--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -11,7 +11,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
   
-    <title>ChocoLux</title>
+    <title>BreadSpot</title>
   
   
     <!-- bootstrap core css -->
