--- a/frontend/SobreNosotros.html
+++ b/frontend/SobreNosotros.html
@@ -64,9 +64,10 @@
       margin-top: 10px;
     }
     .client_grid {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 5px;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
     }
   </style>
 
@@ -181,61 +182,46 @@
     </div>
   </section>
   
-  <section class="client_section" style="background-color: rgb(111, 117, 234);">
+  <section class="client_section" style="background-color: red;">
     <div class="container">
-      <div class="heading_container text-center mb-4">
+      <div class="heading_container text-center mb-2">
         <h2>Nuestro Equipo</h2>
       </div>
       <div class="client_grid">
-        <div class="client_container">
+        <div class="client_container" style="padding: 0 0 0 0;height: 200px; width: 300px;">
           <div class="box">
-            <div class="img-box">
-              <img src="../frontend/assent/email2.jpg" alt="email">
-            </div>
             <div class="detail-box">
               <h4>David Andrades</h4>
               <p>DEV backend</p>
             </div>
           </div>
         </div>
-        <div class="client_container">
-          <div class="box">
-            <div class="img-box">
-              <img src="../frontend/assent/phone3333.png" alt="telefono">
-            </div>
+        <div class="client_container" style="padding: 0 0 0 0;height: 200px; width: 300px;">
+          <div class="box">            
             <div class="detail-box">
               <h4>Fabian Lizama</h4>
               <p>DEV frontend</p>
             </div>
           </div>
         </div>
-        <div class="client_container">
-          <div class="box">
-            <div class="img-box">
-              <img src="../frontend/assent/phone3333.png" alt="telefono">
-            </div>
+        <div class="client_container" style="padding: 0 0 0 0;height: 200px; width: 300px;">
+          <div class="box">            
             <div class="detail-box">
               <h4>Flavio Cifuentes</h4>
               <p>DEV backend</p>
             </div>
           </div>
         </div>
-        <div class="client_container">
-          <div class="box">
-            <div class="img-box">
-              <img src="../frontend/assent/phone3333.png" alt="telefono">
-            </div>
+        <div class="client_container" style="padding: 0 0 0 0;height: 200px; width: 300px;">
+          <div class="box">            
             <div class="detail-box">
               <h4>Francisca Zambrano</h4>
               <p>DEV frontend</p>
             </div>
           </div>
         </div>
-        <div class="client_container">
-          <div class="box">
-            <div class="img-box">
-              <img src="../frontend/assent/phone3333.png" alt="telefono">
-            </div>
+        <div class="client_container" style="padding: 0 0 0 0;height: 200px; width: 300px;">
+          <div class="box">            
             <div class="detail-box">
               <h4>Ignacio Muñoz</h4>
               <p>DEV backend</p>
@@ -245,61 +231,6 @@
       </div>
     </div>
   </section>
-  
-      <div class="container">
-        <div class="sobreNosotros">
-            <h1>Sobre Nosotros</h1>
-            <p>Nuestro proyecto nace desde la experiencia de ser un consumidor que, 
-               al igual que la mayoría de chilenos, se vio en la necesidad y hasta 
-               algunas veces en la preocupación por conseguir el diariamente consumido pan,
-               el cual muchos podrían asumir o dar por sentado su obtención, pero creemos 
-               firmemente en que no hay peor sentimiento que pasar de la tranquilidad rutinaria 
-               de su compra, a darse cuenta en el último momento de su ausencia, para solucionar esto existe BreadSpot</p>
-        </div>
-        <div class="nuestraMision">
-            <img src="assent/OIP.jpg" class="img5">
-            <img src="assent/Captura de pantalla 2024-05-12 231110.png" class="img7">
-
-            <h1>Nuestra Mision</h1>
-            <p>El objetivo principal de BreadSpot es facilitar la comunicación entre compradores y vendedores, 
-                con el fin de lograr una compra/venta efectiva del alimento más comprado y vendido del país; el pan, evitando los 
-                problemas comunes con los que se topa el usuario en su búsqueda diaria de un local con este producto disponible.</p>
-            <p>Desde estar en una zona nueva para ti, hasta cuando llegaste tarde a casa y tu panadería local ya está cerrada,
-                 para eso está BreadSpot, para que sepas dónde ir para que el pan no falte en tu mesa, ahorrándote el ya anticuado 
-                 viaje de local en local.</p>
-        </div>
-
-        <div class="equipo">
-            <div class="1">
-                <img src="">
-                <p>Nombre:</p>
-                <p>CEO</p>
-            </div>
-            <div class="2">
-                <img src="">
-                <p>Nombre:</p>
-                <p>CEO</p>
-            </div>
-            <div class="3">
-                <img src="">
-                <p>Nombre:</p>
-                <p>CEO</p>
-            </div>
-            <div class="4">
-                <img src="">
-                <p>Nombre:</p>
-                <p>CEO</p>
-            </div>
-            <div class="5">
-                <img src="">
-                <p>Nombre:</p>
-                <p>CEO</p>
-            </div>
-        </div>
-    </div>
-    
-    </div>
-
      <!-- info section -->
     <!-- info section -->
     <section class="info_section layout_padding2">
