--- a/frontend/html/testimonial.html
+++ b/frontend/html/testimonial.html
@@ -16,7 +16,7 @@
 
 
   <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="/frontend/css/bootstrap.css" />
   <!--slick slider stylesheet -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick-theme.min.css" />
@@ -25,13 +25,13 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700&display=swap" rel="stylesheet" />
   <!-- slick slider -->
 
-  <link rel="stylesheet" href="css/slick-theme.css" />
+  <link rel="stylesheet" href="/frontend/css/slick-theme.css" />
   <!-- font awesome style -->
-  <link href="css/font-awesome.min.css" rel="stylesheet" />
+  <link href="/frontend/css/font-awesome.min.css" rel="stylesheet" />
   <!-- Custom styles for this template -->
-  <link href="css/main.css" rel="stylesheet" />
+  <link href="/frontend/css/main.css" rel="stylesheet" />
   <!-- responsive style -->
-  <link href="css/responsive.css" rel="stylesheet" />
+  <link href="/frontend/css/responsive.css" rel="stylesheet" />
 
 </head>
 
@@ -59,7 +59,7 @@
                   <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html">Sobre nosotros</a>
+                  <a class="nav-link" href="SobreNosotros.html">Sobre nosotros</a>
                 </li>
 
                 <li class="nav-item">
@@ -97,7 +97,7 @@
                   <div class="carousel-item active">
                     <div class="box">
                       <div class="img-box">
-                        <img src="../frontend/assent/user.jpg" alt="">
+                        <img src="../../frontend/assent/user.jpg" alt="">
                       </div>
                       <div class="detail-box">
                         <h4>
@@ -115,7 +115,7 @@
                   <div class="carousel-item">
                     <div class="box">
                       <div class="img-box">
-                        <img src="../frontend/assent/user.jpg" alt="">
+                        <img src="../../frontend/assent/user.jpg" alt="">
                       </div>
                       <div class="detail-box">
                         <h4>
@@ -134,7 +134,7 @@
                   <div class="carousel-item">
                     <div class="box">
                       <div class="img-box">
-                        <img src="../frontend/assent/user.jpg" alt="">
+                        <img src="../../frontend/assent/user.jpg" alt="">
                       </div>
                       <div class="detail-box">
                         <h4>
@@ -266,13 +266,13 @@
   <!-- footer section -->
 
   <!-- jQery -->
-  <script src="js/jquery-3.4.1.min.js"></script>
+  <script src="/frontend/js/jquery-3.4.1.min.js"></script>
   <!-- bootstrap js -->
-  <script src="js/bootstrap.js"></script>
+  <script src="/frontend/js/bootstrap.js"></script>
   <!-- slick slider -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.js"></script>
   <!-- custom js -->
-  <script src="js/custom.js"></script>
+  <script src="/frontend/js/custom.js"></script>
   <!-- Google Map -->
 
 </body>
