--- a/frontend/temaa/Testimonios.html
+++ b/frontend/temaa/Testimonios.html
@@ -24,7 +24,7 @@
                   <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html">Sobre nosotros</a>
+                  <a class="nav-link" href="SobreNosotros.html">Sobre nosotros</a>
                 </li>
 
                 <li class="nav-item">
