--- a/frontend/temaa/notify.html
+++ b/frontend/temaa/notify.html
@@ -9,7 +9,7 @@
 				initial-scale=1.0"> 
 	<title>Custom Toast Notification</title> 
 	<link rel="stylesheet"
-		href="css/notify.css"> 
+		href="/frontend/css/notify.css"> 
 	<link rel="stylesheet"
 		href= 
 "https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /> 
@@ -48,7 +48,7 @@
 	</div> 
 	<div class="toast-overlay"
 		id="toast-overlay"></div> 
-	<script src="js/notify.js"></script> 
+	<script src="/frontend/js/notify.js"></script> 
 </body> 
 
 </html>
