--- a/frontend/html/contact.html
+++ b/frontend/html/contact.html
@@ -15,7 +15,7 @@
   
   
     <!-- bootstrap core css -->
-    <link rel="stylesheet" type="text/css" href="/frontend/css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="../../frontend/css/bootstrap.css" />
     <!--slick slider stylesheet -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick-theme.min.css" />
@@ -24,13 +24,13 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700&display=swap" rel="stylesheet" />
     <!-- slick slider -->
   
-    <link rel="stylesheet" href="/frontend/css/slick-theme.css" />
+    <link rel="stylesheet" href="../../frontend/css/slick-theme.css" />
     <!-- font awesome style -->
-    <link href="/frontend/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="../../frontend/css/font-awesome.min.css" rel="stylesheet" />
     <!-- Custom styles for this template -->
-    <link href="/frontend/css/main.css" rel="stylesheet" />
+    <link href="../../frontend/css/main.css" rel="stylesheet" />
     <!-- responsive style -->
-    <link href="/frontend/css/responsive.css" rel="stylesheet" />
+    <link href="../../frontend/css/responsive.css" rel="stylesheet" />
     <style>
       .client_section {
         padding: 20px;
