--- a/frontend/html/inicioSesiónVendedor.html
+++ b/frontend/html/inicioSesiónVendedor.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio de sesión Vendedor</title>
-    <link rel="stylesheet" href="/frontend/css/iniciosesion.css">
+    <link rel="stylesheet" href="../../frontend/css/iniciosesion.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
