--- a/frontend/html/registroVendedor.html
+++ b/frontend/html/registroVendedor.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro de vendedor</title>
-    <link rel="stylesheet" href="/frontend/css/registrovendedor.css">
+    <link rel="stylesheet" href="../../frontend/css/registrovendedor.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
